fix: added spacing for decorator

--- a/packages/styles/scss/components/list-box/_list-box.scss
+++ b/packages/styles/scss/components/list-box/_list-box.scss
@@ -1113,6 +1113,13 @@ $list-box-menu-width: convert.to-rem(300px);
   }
 
   .#{$prefix}--list-box__wrapper--decorator
+    .#{$prefix}--list-box__field:has(.#{$prefix}--list-box__selection)
+    ~ .#{$prefix}--list-box__inner-wrapper--decorator
+    > * {
+    inset-inline-end: calc($spacing-10 + 18px);
+  }
+  Fin
+    .#{$prefix}--list-box__wrapper--decorator
     .#{$prefix}--list-box--invalid
     .#{$prefix}--list-box__field:has(.#{$prefix}--list-box__selection)
     .#{$prefix}--list-box__invalid-icon,
@@ -1130,7 +1137,18 @@ $list-box-menu-width: convert.to-rem(300px);
     .#{$prefix}--list-box__invalid-icon {
     inset-inline-end: convert.to-rem(116px);
   }
-
+  .#{$prefix}--list-box__wrapper--decorator
+    .#{$prefix}--list-box--invalid
+    .#{$prefix}--list-box__field:has(.#{$prefix}--list-box__selection)
+    ~ .#{$prefix}--list-box__inner-wrapper--decorator
+    > *,
+  .#{$prefix}--list-box__wrapper--decorator
+    .#{$prefix}--list-box--warning
+    .#{$prefix}--list-box__field:has(.#{$prefix}--list-box__selection)
+    ~ .#{$prefix}--list-box__inner-wrapper--decorator
+    > * {
+    inset-inline-end: convert.to-rem(116px);
+  }
   // Windows HCM fix
   .#{$prefix}--list-box__field,
   .#{$prefix}--list-box__menu,
